# Agent-HTML-Sandbox

./: .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  record.md  skills-lock.json  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.heavy.config.ts
.claude/: settings.local.json
apps/agent-html-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent-html-app/src-tauri/src/: chat_store.rs  inspect_payload.rs  lib.rs  main.rs  session_store.rs
blueprint/: blueprint_rule.md  constitution.md  index.md  roadmap.md
demo/: index.html
docs-web/: README.md  next.config.mjs  package-lock.json  package.json
examples/: einstein.agent.html  first-look.agent.html
scripts/: agent-html-cli-commands.mjs  agent-html-cli-schema.mjs  agent-html-cli-validate.mjs  agent-html-cli.mjs  agent-html-conformance.mjs  agent-html-conformance.test.ts  generate-catalog-prompt.mjs  generate-component-schema-prompt.mjs  generate-component-schema.mjs  inline-dist-index.mjs  package-boundaries.mjs  package-boundaries.test.ts  release-check.mjs  release-metadata.mjs  release-metadata.test.ts  release-shared.mjs  release-tag.mjs  shadcn-test-server.mjs  verify-packed-ahtml.mjs  version-next-alpha.mjs  version-stable.mjs
spec/: app-dev.md  code-governance-temporary.md  components-adoption.md  document-style-config-migration.md  maintenance-checklist.md  map.md  roadmap.md  (+4 more)
(+258 files in other folders)
