[package]
name = "agent-html-app"
version = "0.1.0"
description = "Local-first workbench for agent-html sessions"
authors = ["OpenAI Codex"]
license = "MIT"
edition = "2021"

[lib]
name = "agent_html_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
camino = "1.2"
fs-err = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
